# summarize

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
src/formatters/: mod.rs  output.rs  writer.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  models.rs  openai.rs
src/models/: mod.rs  output_format.rs  token_report.rs  tokenizer_model.rs
src/tokenizers/: mod.rs
src/utils/: api_key.rs  file_helper.rs  mod.rs
tests/: format_tests.rs  tokenizer_tests.rs  utils_tests.rs
