[package]
name = "summarize"
version = "0.1.0"
edition = "2021"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
authors = ["Original by Simon Willison, Rust port by Claude"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
walkdir = "2.4"
anyhow = "1.0"
lazy_static = "1.4"
atty = "0.2"
tiktoken-rs = "0.5"
comfy-table = "7.1"
thousands = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
rayon = "1.8"
indicatif = "0.17"
dirs = "5.0"
dotenv = "0.15"
